--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,8 +7,8 @@
     {{- end }}
     <span>
         Powered by
-        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
-        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
+        <a href="https://www.gnu.org/software/emacs/" rel="noopener noreferrer" target="_blank">Emacs</a> &
+        <a href="https://ox-hugo.scripter.co/" rel="noopener" target="_blank">ox-hugo</a>
     </span>
 </footer>
 {{- end }}
